--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -672,13 +672,14 @@ span.unhappyMessage {
       > input[type="text"], > input[type="password"] {
         padding: 8px ;
         font-size: 16px ;
-        width: 90% ;
+        max-width: 90% ;
+        min-width: 90% ;
         border: {
-          radius: 5px ;
+          radius: 7px ;
           style: solid ;
           width: 1px ;
         }
-        -moz-border-radius: 5px ;
+        -moz-border-radius: 7px ;
         background: white ;
       }
 
