[Teacher console]: Initial structure for creating new sektions defined

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -18,6 +18,7 @@
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/swiss_knife'
+    = render :partial => 'toolbox/sektions'
 
     = render :partial => 'yardsticks/list'
     #flot-chart
