New view for showing sektions and master list of students

--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -3,6 +3,5 @@
   = main_link :for => 'quizzes', :default => true
   = main_link :for => 'yardsticks', :as => 'scoring scheme' 
   = main_link :for => 'report-cards', :as => 'report cards', :with => { :panels => {:wide => "#flot-chart" } }
-  = main_link :for => :sektions, :as => 'me & my sections', :with => { :panels => { :middle => "#new-sektion",
-  :right => "#accounts-summary" } }
+  = main_link :for => :sektions, :as => 'my sections', :with => { :panels => { :wide => "#new-sektion" } }
   = main_link :for => :logout, :href => "/logout", :dynamic => false
