--- a/app/assets/stylesheets/formtastic_changes.css
+++ b/app/assets/stylesheets/formtastic_changes.css
@@ -1,6 +1,7 @@
 
 form.formtastic { 
   font-family : Ubuntu, "Trebuchet MS", Helvetica, Arial, sans-serif;
+  margin-left: 2% ;
 } 
 
 form.formtastic fieldset.inputs p.inline-hints {
