A new element - name-filter - added for times when a subset of names needs to be seen
This element is just a collection of links with some pre-defined attributes
and some attributes that need to be specified - like URL to filtering method

Files to see:
  toolbox/_sektions
  teachers_controller
  teacher.rb

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1169,3 +1169,13 @@ li {
   margin-top: 5px ;
   float: right ;
 } 
+
+.name-filter { 
+  height: 30px ;
+
+  > a {
+    margin: {
+      left: 4% ;
+    }
+  }
+} 
