--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -10,13 +10,13 @@
     = render :partial => 'teachers/buildquiz'
     = render :partial => 'teachers/queue_status'
     = render :partial => 'teachers/reportcards'
+    = render :partial => 'teachers/sektions'
 
     = render :partial => 'toolbox/pdf_viewer'
     = render :partial => 'toolbox/edit_account'
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/swiss_knife'
-    = render :partial => 'toolbox/sektions'
 
     = render :partial => 'yardsticks/list'
     #flot-chart
