--- a/app/views/toolbox/_name_filter.html.haml
+++ b/app/views/toolbox/_name_filter.html.haml
@@ -1,5 +1,5 @@
 
 .name-filter.full-width{ :url => url }
   - [*'A'..'Z'].each_slice(4).each do |m|
-    = link_to "#{m.first}-#{m.last}", "#{url}?id=11&start=#{m.first}&end=#{m.last}", :remote => true
+    = link_to "#{m.first}-#{m.last}", "#{url}&start=#{m.first}&end=#{m.last}", :remote => true
   
