--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -26,7 +26,7 @@ body {
             "DejaVu Sans",
             "Lucida Sans Unicode",
             sans-serif;
-    size: 9.5pt ;
+    size: 12px; 
   }
   width : 1020px ;
   background-color: $gray ; 
