--- a/app/views/teachers/_sektions.html.haml
+++ b/app/views/teachers/_sektions.html.haml
@@ -3,14 +3,19 @@
   = render :partial => 'toolbox/name_filter', 
            :locals => { :url => "teacher/students_with_names.json?id=#{current_account.loggable_id}" }
   = semantic_form_for :sektion, :remote => true, :url => sektion_path, :method => :put do |f|
-    = f.inputs do
-      = f.input :name, :wrapper_html => {:class => :left}
-      = f.submit :class => :right
     #enrolled-students.as-accordion
       - [*9..12].each do |grd|
         .scroll-heading{ :marker => "#{grd}" }= "Grade #{grd}"
         .scroll-content.purgeable{ :columns => 2 }
 
 #sektions-summary
-  #all-my-sektions
-      
+  = semantic_form_for :sektion, :remote => true, :url => "#{sektion_path}.json?id=#{current_account.loggable_id}", 
+                      :method => :post do |f|
+    #misc-sektion-attributes
+      = text_field_tag :name, nil, :class => :left
+      = check_box_tag :exclusive, true, false, :id => 'private-sektion'
+      = label_tag 'private-sektion', "visible only to me"
+    .submit-buttons
+      = submit_tag "add"
+    
+  #all-my-sektions.playlist
