--- a/app/views/teachers/_sektions.html.haml
+++ b/app/views/teachers/_sektions.html.haml
@@ -1,21 +1,25 @@
 
-#new-sektion
+#update-sektion
   = render :partial => 'toolbox/name_filter', 
            :locals => { :url => "teacher/students_with_names.json?id=#{current_account.loggable_id}" }
-  = semantic_form_for :sektion, :remote => true, :url => sektion_path, :method => :put do |f|
+  = semantic_form_for :sektion, :remote => true, 
+                      :url => "/sektion.json", :method => :put do |f|
+    .submit-buttons
+      = submit_tag "update section"
     #enrolled-students.as-accordion
       - [*9..12].each do |grd|
         .scroll-heading{ :marker => "#{grd}" }= "Grade #{grd}"
         .scroll-content.purgeable{ :columns => 2 }
 
 #sektions-summary
-  = semantic_form_for :sektion, :remote => true, :url => "#{sektion_path}.json?id=#{current_account.loggable_id}", 
+  = semantic_form_for :sektion, :remote => true, 
+                      :url => "#{sektion_path}.json?id=#{current_account.loggable_id}", 
                       :method => :post do |f|
     #misc-sektion-attributes
-      = text_field_tag :name, nil, :class => :left
+      = text_field_tag :name, nil, :class => :left, :placeholder => "new section name"
       = check_box_tag :exclusive, true, false, :id => 'private-sektion'
       = label_tag 'private-sektion', "visible only to me"
     .submit-buttons
-      = submit_tag "add"
+      = submit_tag "add section"
     
   #all-my-sektions.playlist
