--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -4,4 +4,5 @@
   = main_link :for => 'yardsticks', :as => 'scoring scheme' 
   = main_link :for => 'report-cards', :as => 'report cards', :with => { :panels => {:wide => "#flot-chart" } }
   = main_link :for => :sektions, :as => 'my sections', :with => { :panels => { :wide => "#update-sektion" } }
+  = main_link :for => :accounts, :as => 'my account'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
