--- a/app/views/quizzes/_controls.html.haml
+++ b/app/views/quizzes/_controls.html.haml
@@ -6,4 +6,5 @@
   %ul.no-bullets
     = minor_link :for => 'new-quiz', :label => 'make new quiz',
                  :with => { :panels => {:side => '#build-quiz'} }
-    = minor_link :for => 'suggestion', :as => 'suggest questions', :href => "#{server}/front-desk/suggestion-forms/#{teacher.id}-#{teacher.first_name}.pdf"
+    = minor_link :for => 'suggestion', :as => 'suggest questions', 
+                 :href => "#{server}/front-desk/teachers/#{teacher.school_id}-#{teacher.id}/petty-cash/#{teacher.id}-#{teacher.first_name}.pdf"
