Show sektion roster PDF download link along with the sektion

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -197,6 +197,12 @@ p > a, div > a {
   color: white ;
   cursor: pointer ;
 
+  > a { 
+    float: left ;
+    margin-left: 2% ; 
+    font-size: 11px ;
+    text-transform: lowercase ;
+  } 
 } 
 
 #pending-quizzes {
