--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -201,7 +201,7 @@ p > a, div > a {
     float: left ;
     margin-left: 2% ; 
     font-size: 11px ;
-    text-transform: lowercase ;
+    font-variant: small-caps ;
   } 
 } 
 
