Swiss-knives may need to be styled on a case-by-case basis ..
This commit is the first such instance of the above

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -205,6 +205,16 @@ p > a, div > a {
   } 
 } 
 
+#testpaper { 
+  > .swiss-knife { 
+    min-height: 30px ;
+
+    > .micro-ticker { 
+      min-width: 90% ;
+    } 
+  } 
+} 
+
 #pending-quizzes {
   a { 
     color: $my-blue ;
@@ -399,7 +409,6 @@ span.unhappyMessage {
     left: 3% ;
     right: 3% ;
   } 
-  max-width: 40% ;
 }
 
 .led {
