(student) List graded worksheets w/ marks in student console

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1191,5 +1191,12 @@ li {
       margin-bottom: 10px ;
     } 
   } 
+} 
 
+#published-worksheets { 
+  .swiss-knife {
+    > .micro-ticker { 
+      color: $my-blue ;
+    } 
+  } 
 } 
