--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -1,6 +1,7 @@
 
 - content_for :toolbox do 
   #toolbox.hidden 
+    = render :partial => 'students/worksheets'
     = render :partial => 'toolbox/document_preview'
     = render :partial => 'toolbox/edit_account'
     = render :partial => 'toolbox/inline_error'
