--- a/app/views/students/_control-panel.html.haml
+++ b/app/views/students/_control-panel.html.haml
@@ -1,5 +1,5 @@
 
 %ul.no-bullets
-  = main_link :for => 'report-cards', :default => true
+  = main_link :for => 'worksheets', :as => "my worksheets", :default => true
   = main_link :for => :account, :as => 'my account'
   = main_link :for => :logout, :href => "/logout", :dynamic => false
