--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -433,6 +433,8 @@ span.unhappyMessage {
     top: 2px ;
     bottom: 2px ;
   }
+  margin-top: 2px ;
+  font-weight: bold ;
 }
 
 
@@ -1205,6 +1207,7 @@ li {
       }
       color: white ;
       margin-top: -4px ;
+      text-align: center ;
     } 
   } 
 } 
