- variable substitution bugs in mailer

--- a/app/views/mailbot/suggestion_typeset.html.haml
+++ b/app/views/mailbot/suggestion_typeset.html.haml
@@ -1,7 +1,7 @@
 
 %h3= "Dear #{@name},"
 %p
-  We have finished typesetting the questions you sent on <b>@date</b> using the suggestion form.
+  We have finished typesetting the questions you sent on <b>#{@date}</b> using the suggestion form.
   These questions have also been added to your favourites
 %p
   Go to <b>my suggestions</b> to see what topic headings the questions have been placed under. 
