--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -19,7 +19,10 @@
             = label_tag :skip_previously_used, "skip questions used before"
           .filter
             = check_box_tag :liked, true
-            = label_tag :liked, "liked by me"
+            = label_tag :liked, "my favourites"
+          .filter
+            = check_box_tag :suggested, true
+            = label_tag :suggested, "suggested by me"
         = submit_tag 'next', :class => :right
       .form-fields.as-accordion
   #question-options
