(teacher): Separate area for showing typeset suggestions

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -11,6 +11,7 @@
     = render :partial => 'teachers/queue_status'
     = render :partial => 'teachers/reportcards'
     = render :partial => 'teachers/sektions'
+    = render :partial => 'teachers/typeset'
 
     = render :partial => 'toolbox/pdf_viewer'
     = render :partial => 'toolbox/edit_account'
