Minor inconsistencies removed

--- a/app/views/mailbot/suggestion_typeset.html.haml
+++ b/app/views/mailbot/suggestion_typeset.html.haml
@@ -4,7 +4,7 @@
   We have finished typesetting the questions you sent on <b>#{@date}</b> using the suggestion form.
   These questions have also been added to your favourites
 %p
-  Go to <b>my suggestions</b> to see what topic headings the questions have been placed under. 
+  Go to <b>my questions</b> to see what topic headings the questions have been placed under. 
   This way, the next time you build a quiz and want to use one of your suggested questions, you
   will know which topics to pick
 %p 
