All grading related housed in re-named file - grading_tools.html.haml

--- a/app/views/layouts/examiner.html.haml
+++ b/app/views/layouts/examiner.html.haml
@@ -12,7 +12,7 @@
     = render :partial => 'verticals/masterlist'
     = render :partial => 'topics/masterlist'
     = render :partial => 'toolbox/grading_canvas'
-    = render :partial => 'toolbox/grading_btns'
+    = render :partial => 'toolbox/grading_tools'
 
 
 !!!5
