--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -8,6 +8,7 @@
 
     = render :partial => 'teachers/assignquiz'
     = render :partial => 'teachers/buildquiz'
+    = render :partial => 'teachers/calibrations'
     = render :partial => 'teachers/queue_status'
     = render :partial => 'teachers/reportcards'
     = render :partial => 'teachers/sektions'
@@ -19,7 +20,6 @@
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/swiss_knife'
 
-    = render :partial => 'yardsticks/list'
     #flot-chart
 
 !!!5
