--- a/app/assets/stylesheets/yardsticks.css.scss
+++ b/app/assets/stylesheets/yardsticks.css.scss
@@ -28,8 +28,9 @@ $light-gray: lighten($gray, 30%) ;
 
     li {
       right: 1px ;
-      width: 50px ;
-      font-size: 17px ;
+      width: 70px ;
+      font-size: 14px ;
+      text-align: left ;
       border: {
         right: none ;
         bottom-width: 1px !important ;
