--- a/app/views/examiners/_abacus.html.haml
+++ b/app/views/examiners/_abacus.html.haml
@@ -1,11 +1,14 @@
 
 #grade-abacus
   #current-items
-    #current-student.left
-    #current-question.right
+    .submit-buttons.right
+      %input{ :type => :button, :id => 'undo-btn', :value => 'undo last'} 
+    %div.left
+      #current-question
+      #current-student
   = semantic_form_for :grade, :url => assign_grade_path, :remote => true do |f|
     #abacus.as-accordion
-      .scroll-heading{ :marker => 0 }= "Insight"
+      .scroll-heading{ :marker => 0 }= "are the key insights evident?"
       #insight.scroll-content.measure
         - Yardstick.insights.order(:weight).each do |m|
           .level{ :marker => "#{m.id}" }
@@ -13,7 +16,7 @@
             .label.left
               <b>#{m.bottomline}&nbsp&nbsp&nbsp</b>#{m.meaning}
 
-      .scroll-heading{ :marker => 1 }= "Formulation"
+      .scroll-heading{ :marker => 1 }= "is the follow-up work complete & accurate?"
       #formulation.scroll-content.measure
         - Yardstick.formulations.order(:weight).each do |m|
           .level{ :marker => "#{m.id}" }
@@ -21,7 +24,7 @@
             .label.left
               <b>#{m.bottomline}&nbsp&nbsp&nbsp</b>#{m.meaning}
 
-      .scroll-heading{ :marker => 2}= "Calculation"
+      .scroll-heading{ :marker => 2}= "have calculations been done correctly?"
       #calculation.scroll-content.measure
         - Yardstick.calculations.order(:weight).each do |m|
           .level{ :marker => "#{m.id}" }
