Changed type of allotment in Grades & Calibrations to float ..
Unlike before, allotments are now calculated based on user input.
This is true even for calibrations where a "fair-value" is calculated
at the time of calibration creation

It is important therefore to store this calculated value as a precision
number and not simply as an integer

This also means changing the type of the <input> in #calibrations to
"text" and not "number" - which seems to work only for integers
and is anyways new in HTML-5

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1268,8 +1268,9 @@ li {
             background: transparent ;
             color: white ; 
             border: none ;
-            width: 100% ;
+            max-width: 100% ;
             text-align: center ;
+            padding: 0px ;
           }
 
           > .denominator { 
