--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1314,21 +1314,20 @@ li {
       font-size: 12px ;
       color: $my-blue ; 
       margin-bottom: 20px ;
-      text-transform: lowercase ;
     } 
 
     .question {
       font: {
-        size: 12px ;
+        size: 11px ;
       } 
       margin: {
         bottom: 7px ;
-        left: -25px ;
+        top: 20px ;
       }
       padding: 4px 5px 4px 5px ;
       border-radius: 5px ;
-      color: $my-blue ; 
-      // background-color: darken(gray, 15%) ; 
+      color: white ; 
+      background-color: $panel-colour ;
     }
   } 
 
