--- a/app/views/toolbox/_calibrations.html.haml
+++ b/app/views/toolbox/_calibrations.html.haml
@@ -7,22 +7,18 @@
     #preamble
       Based on what is written, can one say that the student ...
 
-    %ul
-      %li.question
-        identified the key insights needed to solve the problem ?
-        - Yardstick.insights.order(:weight).each do |y|
-          .root-cause{ :marker => "#{y.id}" }
-            .bottomline= "#{y.bottomline}"
-            .meaning= "#{y.meaning}"
-      %li.question
-        built on the insights to formulate a mathematically sound solution ?
-        - Yardstick.formulations.order(:weight).each do |y|
-          .root-cause{ :marker => "#{y.id}" }
-            .bottomline= "#{y.bottomline}"
-            .meaning= "#{y.meaning}"
-      %li.question
-        performed all required calculations correctly ?
-        - Yardstick.calculations.order(:weight).each do |y|
-          .root-cause{ :marker => "#{y.id}" }
-            .bottomline= "#{y.bottomline}"
-            .meaning= "#{y.meaning}"
+    .question= "Identified the key insights needed to solve the problem ?"
+    - Yardstick.insights.order(:weight).each do |y|
+      .root-cause{ :marker => "#{y.id}" }
+        .bottomline= "#{y.bottomline}"
+        .meaning= "#{y.meaning}"
+    .question= "Built on the insights to formulate a mathematically sound solution ?"
+    - Yardstick.formulations.order(:weight).each do |y|
+      .root-cause{ :marker => "#{y.id}" }
+        .bottomline= "#{y.bottomline}"
+        .meaning= "#{y.meaning}"
+    .question= "Performed all required calculations correctly ?"
+    - Yardstick.calculations.order(:weight).each do |y|
+      .root-cause{ :marker => "#{y.id}" }
+        .bottomline= "#{y.bottomline}"
+        .meaning= "#{y.meaning}"
